#
# SPDX-License-Identifier: BSD-3-Clause
# Copyright 2020-2021, Intel Corporation
#

add_subdirectory(example-01-connection)
add_subdirectory(example-02-read-to-volatile)
add_subdirectory(example-04-write-to-persistent)
add_subdirectory(example-minussr-01)
add_subdirectory(example-minussr-02)
add_subdirectory(example-minussr-03)
add_subdirectory(example-minussr-04)
add_subdirectory(example-minussr-05)
add_subdirectory(example-minussr-06)
add_subdirectory(example-minussr-07)
add_subdirectory(example-minussr-08)
